--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
-RewriteEngine On 
-RewriteCond %{SERVER_PORT} 80
-RewriteCond %{HTTP_HOST} ^(www\.)?negritube\.fr
+RewriteEngine On 
+
+RewriteCond %{SERVER_PORT} 80
+
+RewriteCond %{HTTP_HOST} ^(www\.)?negritube\.fr
+
 RewriteRule ^(.*)$ https://negritube.fr/$1 [R,L]
+
+ErrorDocument 404 index.php
