--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,12 @@ RewriteCond %{HTTP_HOST} ^(www\.)?negritube\.fr
 
 RewriteRule ^(.*)$ https://negritube.fr/$1 [R,L]
 
-ErrorDocument 404 index.php
+RewriteEngine On
+
+RewriteBase /
+
+RewriteCond %{REQUEST_FILENAME} !-f
+
+RewriteCond %{REQUEST_FILENAME} !-d
+
+RewriteRule ^(.*)$ /index.php?$1&%{QUERY_STRING} [L]
