--- a/.htaccess
+++ b/.htaccess
@@ -6,12 +6,4 @@ RewriteCond %{HTTP_HOST} ^(www\.)?negritube\.fr
 
 RewriteRule ^(.*)$ https://negritube.fr/$1 [R,L]
 
-RewriteEngine On
-
-RewriteBase /
-
-RewriteCond %{REQUEST_FILENAME} !-f
-
-RewriteCond %{REQUEST_FILENAME} !-d
-
-RewriteRule ^(.*)$ /index.php?$1&%{QUERY_STRING} [L]
+ErrorDocument 404 index.php
