--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,5 @@ RewriteCond %{SERVER_PORT} 80
 RewriteCond %{HTTP_HOST} ^(www\.)?negritube\.fr
 
 RewriteRule ^(.*)$ https://negritube.fr/$1 [R,L]
+
+ErrorDocument 404 /404.php
