--- a/.htaccess
+++ b/.htaccess
@@ -9,3 +9,7 @@ RewriteRule ^(.*)$ https://negritube.fr/$1 [R,L]
 RedirectMatch 403 ^/assets/?$
 
 ErrorDocument 404 https://negritube.fr/404.php
+
+<IfModule mod_autoindex.c>
+Options -Indexes
+</IfModule>
