--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,13 @@
+ErrorDocument 404 https://negritube.fr/404.php
+
 RewriteEngine On 
+RewriteBase /
+
+RewriteCond %{REQUEST_URI} ^/404/$
+RewriteRule ^(.*)$ /404.php [L]
+
+RewriteCond %{REQUEST_URI} ^/500/$
+RewriteRule ^(.*)$ /404.php [L]
 
 RewriteCond %{SERVER_PORT} 80
 
@@ -7,8 +16,6 @@ RewriteCond %{HTTP_HOST} ^(www\.)?negritube\.fr
 RewriteRule ^(.*)$ https://negritube.fr/$1 [R,L]
 
 RedirectMatch 403 ^/assets/?$
-
-ErrorDocument 404 https://negritube.fr/404.php
 
 <IfModule mod_autoindex.c>
 Options -Indexes
