redirection old-URL

--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,30 @@ RewriteBase /
 # Règles de réécriture d'URL :
 #--------------------------------------------------
 
+#Ancienne URL :
+Redirect 301 "/pages/Mal%20tèt.php" "https://negritube.fr/audio-1.html"
+Redirect 301 "/pages/Konsyans.php" "https://negritube.fr/audio-2.html"
+Redirect 301 "/pages/Eritaj.php" "https://negritube.fr/audio-9.html"
+Redirect 301 "/pages/Misiyon.php" "https://negritube.fr/audio-22.html"
+
+Redirect 301 "/pages/WIB.php" "https://negritube.fr/video-0.html"
+Redirect 301 "/pages/DLO.php" "https://negritube.fr/video-1.html"
+Redirect 301 "/pages/Fòs%20é%20kouraj.php" "https://negritube.fr/video-2.html"
+Redirect 301 "/pages/Piétònn'la%20(Philippe%20BLAZE).php" "https://negritube.fr/video-3.html"
+Redirect 301 "/pages/Sò%20a%20limanité.php" "https://negritube.fr/video-4.html"
+Redirect 301 "/pages/Sonjé%20BINO%20(Philippe%20BLAZE).php" "https://negritube.fr/video-5.html"
+Redirect 301 "/pages/LILY.php" "https://negritube.fr/video-6.html"
+Redirect 301 "/pages/Petite_Marie.php" "https://negritube.fr/video-7.html"
+Redirect 301 "/pages/Nou_mélé_Philippe_BLAZE.php" "https://negritube.fr/video-8.html"
+Redirect 301 "/pages/Chanson_Hommage_aux_Gwo_Mòdan.php" "https://negritube.fr/video-9.html"
+Redirect 301 "/pages/Philippe_BLAZE_piano_bar.php" "https://negritube.fr/video-10.html"
+Redirect 301 "/pages/Sèl_si_on_gran_chimen.php" "https://negritube.fr/video-11.html"
+Redirect 301 "/pages/Ekzòd.php" "https://negritube.fr/video-12.html"
+Redirect 301 "/pages/Avé%20Maria%20Antillais.php" "https://negritube.fr/video-13.html"
+Redirect 301 "/pages/Pénélope.php" "https://negritube.fr/video-14.html"
+Redirect 301 "/pages/Konjé%20bonifié.php" "https://negritube.fr/video-15.html"
+
+
 # AudioFile avec numéro track :
 RewriteRule ^audio-(\d+)\.html$ /pages/AudioFile.php?track=$1 [L]
 
