--- a/.htaccess
+++ b/.htaccess
@@ -21,6 +21,9 @@ Redirect 301 "/pages/Avé Maria Antillais.php" "https://negritube.fr/video-13.ht
 Redirect 301 "/pages/Pénélope.php" "https://negritube.fr/video-14.html"
 Redirect 301 "/pages/Konjé bonifié.php" "https://negritube.fr/video-15.html"
 
+Redirect 301 "/pages/AudioFile.php?track=(\d+)" "https://negritube.fr/audio-$1.html"
+Redirect 301 "/pages/VideoFile.php?track=(\d+)" "https://negritube.fr/video-$1.html"
+
 ErrorDocument 404 "https://negritube.fr/404.php"
 
 #--------------------------------------------------
@@ -37,6 +40,9 @@ RewriteBase /
 #--------------------------------------------------
 # Règles de réécriture d'URL :
 #--------------------------------------------------
+
+# Index.php
+RewriteRule ^$ /index.php
 
 # AudioFile avec numéro track :
 RewriteRule ^audio-(\d+)\.html$ /pages/AudioFile.php?track=$1 [L]
