prise en compte du NAS dans le htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -42,7 +42,9 @@ RewriteBase /
 #--------------------------------------------------
 
 # Sur mon NAS
-# RewriteRule !^Multi-Plateform/ Multi-Plateform%{REQUEST_URI}
+<Directory "/volume1/web/Multi-Plateform/">
+    RewriteRule !^Multi-Plateform/ Multi-Plateform%{REQUEST_URI}
+</Directory>
 
 # Index.php
 RewriteRule ^$ /index.php
