Ajout mentions-légales

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,21 @@ assets/videos/*
 assets/audio/*
 matomo/*
 .htaccess
+pages/config.php
+
+#Eléments du backend
+assets/css/login.css
+assets/css/secret.css
+assets/css/standard.css
+assets/img/bouton google.png
+assets/js/javascript.js
+assets/js/jquery.js
+assets/js/login.js
+pages/connect_propre.php
+pages/connect.php
+pages/login.php
+pages/secret.php
+pages/upload.php
+pages/vendor/*
+pages/composer.json
+pages/composer.lock
